--- a/Backend/CustomData/RunnerInfo.html
+++ b/Backend/CustomData/RunnerInfo.html
@@ -6,65 +6,111 @@
     <title>Spendenlauf – Zusammenfassung</title>
     <style>
         body {
-            background-color: #fff8dc;
-            font-family: Arial, sans-serif;
+            background-color: #fefce8;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 40px 15px;
             display: flex;
             justify-content: center;
         }
+
         .container {
             background-color: #ffffff;
-            padding: 30px;
-            max-width: 600px;
+            padding: 40px;
+            max-width: 640px;
             width: 100%;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+            text-align: left;
         }
-        h1, h2, h3, h4 {
+
+        h1 {
             color: #1e3a8a;
+            font-size: 28px;
             margin-bottom: 10px;
         }
+
+        h2 {
+            color: #2c5282;
+            font-size: 20px;
+            margin-bottom: 20px;
+        }
+
+        h4 {
+            color: #1a202c;
+            font-size: 18px;
+            margin-top: 30px;
+        }
+
         p {
-            color: #555;
+            color: #4a5568;
             font-size: 16px;
             line-height: 1.6;
+            margin-bottom: 14px;
         }
+
         table {
             width: 100%;
             margin: 20px 0;
             border-collapse: collapse;
+            background-color: #f7fafc;
+            border-radius: 8px;
+            overflow: hidden;
         }
+
         th, td {
             text-align: left;
-            padding: 8px 0;
-            color: #333;
+            padding: 10px 14px;
+            border-bottom: 1px solid #e2e8f0;
+            color: #2d3748;
         }
+
         th {
             width: 45%;
             font-weight: normal;
+            background-color: #edf2f7;
         }
+
+        tr:last-child td {
+            border-bottom: none;
+        }
+
         hr {
             border: 0;
             height: 1px;
-            background-color: #ccc;
+            background-color: #cbd5e0;
             margin: 30px 0;
         }
+
         .button {
             display: inline-block;
             margin-top: 25px;
-            padding: 12px 25px;
+            padding: 14px 24px;
             background-color: #4caf50;
             color: white;
             text-decoration: none;
-            border-radius: 6px;
+            border-radius: 8px;
             font-size: 16px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s ease, transform 0.2s;
         }
+
         .button:hover {
-            background-color: #45a049;
+            background-color: #388e3c;
+            transform: translateY(-2px);
         }
+
+        .info-link {
+            margin-top: 20px;
+            display: inline-block;
+            font-size: 16px;
+            color: #2b6cb0;
+            text-decoration: none;
+        }
+
+        .info-link:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
@@ -84,29 +130,14 @@
 
         {% for value in data %}
             <table>
-                <tr>
-                    <th>Vorname:</th>
-                    <td>{{ value.firstname }}</td>
-                </tr>
-                <tr>
-                    <th>Nachname:</th>
-                    <td>{{ value.lastname }}</td>
-                </tr>
+                <tr><th>Vorname</th><td>{{ value.firstname }}</td></tr>
+                <tr><th>Nachname</th><td>{{ value.lastname }}</td></tr>
                 {% if value.FixedDonation %}
-                    <tr>
-                        <th>Feste Spende:</th>
-                        <td>{{ value.Donation }} €</td>
-                    </tr>
+                    <tr><th>Feste Spende</th><td>{{ value.Donation }} €</td></tr>
                 {% else %}
-                    <tr>
-                        <th>Spende pro Kilometer:</th>
-                        <td>{{ value.Donation }} €</td>
-                    </tr>
+                    <tr><th>Spende pro Kilometer</th><td>{{ value.Donation }} €</td></tr>
                 {% endif %}
-                <tr>
-                    <th>Gesamtbetrag:</th>
-                    <td>{{ value.DonationTotal }} €</td>
-                </tr>
+                <tr><th>Gesamtbetrag</th><td><strong>{{ value.DonationTotal }} €</strong></td></tr>
             </table>
         {% endfor %}
 
@@ -116,7 +147,9 @@
 
         <p>Deine Sponsor*innen wurden ebenfalls informiert.</p>
 
-        <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/" class="button">Mehr Informationen</a>
+        
+        <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/" class="info-link" target="_blank">Mehr Informationen zum Hungerlauf</a>
+        <br>
     </div>
 </body>
 </html>
