Del Files, short files, reset text, better comments

--- a/Backend/CustomData/DonRecAuth.html
+++ b/Backend/CustomData/DonRecAuth.html
@@ -58,9 +58,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="color: #1e3a8a; font-size: 26px; margin-bottom: 10px;">Hungerlauf 2025</h1>
+        <h1 style="color: #1e3a8a; font-size: 26px; margin-bottom: 10px;">Spendenlauf 2025</h1>
         <h2>Hallo {{ name }},</h2>
-        <p>herzlichen Dank, dass Sie als Sponsor*in beim Hungerlauf mitwirken möchten!</p>
+        <p>herzlichen Dank, dass Sie als Sponsor*in mitwirken möchten!</p>
 
         <table>
             <tr>
@@ -82,14 +82,14 @@
         <a href="{{ link_url }}" class="button">Spende bestätigen</a>
 
         <p style="margin-top: 30px;">
-            Mit dem Klick auf den Bestätigungslink erlauben Sie uns, Ihre Angaben zum Zweck der Spendenverwaltung an die Allianzmission weiterzugeben – ausschließlich im Rahmen dieses Projekts.
+            Mit dem Klick auf den Bestätigungslink erlauben Sie uns, Ihre Angaben zum Zweck der Spendenverwaltung weiterzugeben – ausschließlich im Rahmen dieses Projekts.
         </p>
 
         <small>Falls Sie diese Nachricht irrtümlich erhalten haben oder nicht spenden möchten, können Sie diese E-Mail einfach ignorieren.</small>
 
         <p style="margin-top: 20px;">
-            Mehr Informationen zum Hungerlauf finden Sie unter:<br>
-            <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/">evangelischegemeinschaftluetzel.de</a>
+            Mehr Informationen zum Spendenlauf finden Sie unter:<br>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=LsvcPvhtL9PTktSz">link.de</a>
         </p>
     </div>
 </body>
