--- a/Backend/CustomData/RunnerInfo.html
+++ b/Backend/CustomData/RunnerInfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spendenlauf – Zusammenfassung</title>
+    <title>Spendenlauf - Zusammenfassung</title>
     <style>
         body {
             background-color: #fefce8;
@@ -148,7 +148,7 @@
         <p>Deine Sponsor*innen wurden ebenfalls informiert.</p>
 
         
-        <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/" class="info-link" target="_blank">Mehr Informationen zum Hungerlauf</a>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=LsvcPvhtL9PTktSz" class="info-link" target="_blank">Mehr Informationen zum Spendenlauf</a>
         <br>
     </div>
 </body>
