--- a/Backend/CustomData/SponsorInfo.html
+++ b/Backend/CustomData/SponsorInfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungerlauf – Spendenübersicht</title>
+    <title>Spendenlauf - Spendenübersicht</title>
     <style>
         body {
             background-color: #f3f4f6;
@@ -131,10 +131,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hungerlauf 2025 – Spendenübersicht</h1>
+        <h1>Spendenlauf - Spendenübersicht</h1>
 
         <h2>Hallo {{ name }},</h2>
-        <p>der Spendenlauf ist beendet – vielen Dank, dass Sie als Sponsor*in dabei waren!</p>
+        <p>der Spendenlauf ist beendet - vielen Dank, dass Sie als Sponsor*in dabei waren!</p>
 
         <p>Sie haben <strong>{{ Amount }}</strong> Läufer*innen unterstützt. Hier sind die Details:</p>
 
@@ -160,23 +160,28 @@
         <h3>Spendeninformationen</h3>
         <p>Bitte überweisen Sie den Betrag von <strong>{{ Total }} €</strong> bis zum <em>**Hier Datum einfügen**</em>:</p>
         
-        <p>Online über die Website der Allianz Mission e.V.:</p>
-        <p><a href="https://spenden.twingle.de/allianz-mission-e-v/hungerlauf-2025/tw682638edb6575/page?tr=hunger" target="_blank" class="donation-button">Allianz Mission | Hungerlauf Spende</a></p>
-        <p>Dort können Sie auch eine Spendenbescheinigung anfordern.</p>
  
         <hr>
-        <p>Alternativ per Überweisung auf folgendes Konto:</p>
+        <h3>Spendenanschrift:</h3>
         <table>
-            <tr><th>Kontoinhaber</th><td>Allianz-Mission e. V.</td></tr>
-            <tr><th>IBAN</th><td>DE86452604750009110900</td></tr>
-            <tr><th>Bank</th><td>Spar- und Kreditbank Witten</td></tr>
-            <tr><th>BIC</th><td>GENODEM1BFG</td></tr>
+            <tr>
+                <th>IBAN: </th>
+                <td>DE02100500000054540402</td>
+            </tr>
+            <tr>
+                <th>Bank: </th>
+                <td>LANDESBANK BERLIN</td>
+            </tr>
+            <tr>
+                <th>BIC: </th>
+                <td>BELADEBE</td>
+            </tr>
         </table>
-        <p>Bitte mit dem Betreff <strong>"Hungerlauf"</strong> und Ihrem Namen!</p>
-        <hr>
-        <p>Bei Fragen oder wenn Sie die Frist nicht einhalten können, schreiben Sie uns an <a href="mailto:example@mail.de">info@hungerlauf.de</a> oder wenden Sie sich direkt an die Hungerlauf-Verantwortlichen.</p>
 
-        <p><a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungeqrlauf/" target="_blank">Weitere Informationen zum Hungerlauf</a></p>
+        <p>Bitte mit dem Betreff <strong>"Musterlauf"</strong> und Ihrem Namen!</p>
+        <hr>
+
+        <p><a href="https://youtu.be/dQw4w9WgXcQ?si=LsvcPvhtL9PTktSz" target="_blank">Weitere Informationen</a></p>
     </div>
 </body>
 </html>
