--- a/Backend/CustomData/UserAuth.html
+++ b/Backend/CustomData/UserAuth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungerlauf Anmeldung</title>
+    <title>Spendenlauf Anmeldung</title>
     <style>
         body {
             background-color: #f9f9f9;
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hungerlauf 2025</h1>
+        <h1>Spendenlauf</h1>
 
         <h2>Danke für deine Anmeldung, {{ name }}!</h2> 
 
@@ -72,8 +72,8 @@
         </p>
 
         <p style="margin-top: 20px;">
-            Mehr zum Hungerlauf findest du hier:<br>
-            <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/">Infos zum Hungerlauf</a>
+            Mehr zum Spendenlauf findest du hier:<br>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=LsvcPvhtL9PTktSz">Infos zum Spendenlauf</a>
         </p>
     </div>
 </body>
